--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
-.App {
-  text-align: center;
+:root {
+    --primary: #003B40;
+    --secondary: #ffffff;
+    --background: #EDF0EF;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app {
+    background-color: var(--background);
+    overflow-x: clip;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.logo {
+    width: 80px;
+    height: 80px;
+    cursor: pointer;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.alignCenter {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.head {
+    color: var(--primary);
+    margin-bottom: 0px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.spaceContainer {
+    padding: 4%;
+}
+
+.shadowEffect {
+    border-radius: 20px !important;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2) !important;
+}
+
+.footerStyle {
+    background-color: var(--primary);
+}
+
+.footerText {
+    color: var(--secondary);
+}
+
+.storeDetailsImage {
+    width: 400px;
+    height: 400px;
+    border-radius: 20px;
+}
+
+.chipSize {
+    width: 200px;
+    height: 50px !important;
 }
